apps/_template/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: <APP_NAME>
  labels:
    app.kubernetes.io/part-of: homelab
